crates/test-ui/ui/msg_send_only_message.stderr
error[E0277]: the trait bound `{integer}: MessageReceiver` is not satisfied
 --> ui/msg_send_only_message.rs
  |
  |     unsafe { msg_send![1, new] };
  |              ^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `{integer}`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: required for `MethodFamily<1>` to implement `RetainSemantics<{integer}, _, KindSendMessage>`
  = note: required for `MethodFamily<1>` to implement `MsgSend<{integer}, _>`
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
